After Adding Courses

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   },
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "cd backend && npm start",
-    "client": "cd frontend && npm start"
+    "server": "cd backend && nodemon index.js",
+    "client": "cd frontend && npm run dev"
   }
 }
