--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.66.11",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.1",
+    "firebase": "^11.7.3",
     "lucide-react": "^0.479.0",
     "postcss": "^8.5.3",
     "react": "^18.3.1",
